--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -17,3 +17,7 @@ jobs:
       - name: "Integration Test"
         run: |
           ./gradlew integrationTest
+      - uses: actions/upload-artifact@v4
+        with:
+          name: test-artifacts
+          path: **/build/reports/test/**/index.html
